@@ -56,7 +56,25 @@ name|java
 operator|.
 name|util
 operator|.
+name|HashSet
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
 import|;
 end_import
 begin_import
@@ -5611,6 +5629,161 @@ name|toString
 argument_list|(
 literal|"field"
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testExtractTerms
+specifier|public
+name|void
+name|testExtractTerms
+parameter_list|()
+block|{
+name|Term
+name|a
+init|=
+operator|new
+name|Term
+argument_list|(
+literal|"f"
+argument_list|,
+literal|"a"
+argument_list|)
+decl_stmt|;
+name|Term
+name|b
+init|=
+operator|new
+name|Term
+argument_list|(
+literal|"f"
+argument_list|,
+literal|"b"
+argument_list|)
+decl_stmt|;
+name|Term
+name|c
+init|=
+operator|new
+name|Term
+argument_list|(
+literal|"f"
+argument_list|,
+literal|"c"
+argument_list|)
+decl_stmt|;
+name|Term
+name|d
+init|=
+operator|new
+name|Term
+argument_list|(
+literal|"f"
+argument_list|,
+literal|"d"
+argument_list|)
+decl_stmt|;
+name|BooleanQuery
+name|bq
+init|=
+operator|new
+name|BooleanQuery
+argument_list|()
+decl_stmt|;
+name|bq
+operator|.
+name|add
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+name|a
+argument_list|)
+argument_list|,
+name|Occur
+operator|.
+name|SHOULD
+argument_list|)
+expr_stmt|;
+name|bq
+operator|.
+name|add
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+name|b
+argument_list|)
+argument_list|,
+name|Occur
+operator|.
+name|MUST
+argument_list|)
+expr_stmt|;
+name|bq
+operator|.
+name|add
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+name|c
+argument_list|)
+argument_list|,
+name|Occur
+operator|.
+name|FILTER
+argument_list|)
+expr_stmt|;
+name|bq
+operator|.
+name|add
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+name|d
+argument_list|)
+argument_list|,
+name|Occur
+operator|.
+name|MUST_NOT
+argument_list|)
+expr_stmt|;
+name|Set
+argument_list|<
+name|Term
+argument_list|>
+name|terms
+init|=
+operator|new
+name|HashSet
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|bq
+operator|.
+name|extractTerms
+argument_list|(
+name|terms
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|new
+name|HashSet
+argument_list|<>
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|a
+argument_list|,
+name|b
+argument_list|)
+argument_list|)
+argument_list|,
+name|terms
 argument_list|)
 expr_stmt|;
 block|}
